2001-09-15  Darin Adler  <darin@bentspoon.com>

	* rsvg-paint-server.c: (rsvg_paint_server_lin_grad_free),
	(rsvg_paint_server_rad_grad_free): Fix some code that does
	a null dereference.

	* test-rsvg.c: (main): Add a missing exit statement.

2001-07-25  Ramiro Estrugo  <ramiro@fateware.com>

	* librsvg.spec.in:
	Add missing pkg-config file.
	Add missing m4 file.

2001-07-25  Ramiro Estrugo  <ramiro@fateware.com>

	* Makefile.am:
	* configure.in:
	* librsvg-1.0.pc.in:
	Change includedir to librsvg-1/librsvg that it can cohabitate with
	librsvg from the GNOME2 platform.

	* librsvg.spec.in:
	Update for library and includedir name changes, plus some extra
	cleanup.

2001-07-21  Darin Adler  <darin@bentspoon.com>

	* rsvg-ft.c: (rsvg_ft_measure_or_render_string):
	Fix bug where we would render past the end of the passed-in
	string if there are any multi-byte sequences in the string.

	* autogen.sh: Remove xml-i18n-toolize.

	* configure.in: Remove some commented-out stuff that could
	confuse scripts that grep through this file.

	* .cvsignore: Remove some files that should not be generated.

==== librsvg 1.0.1 ====

2001-07-05  Darin Adler  <darin@bentspoon.com>

	* configure.in: Bump version to 1.0.1
	* NEWS: Tell about new features for 1.0.1

2001-06-01  Darin Adler  <darin@bentspoon.com>

	* Makefile.am:
	* rsvg.h:
	* rsvg.c: (rsvg_text_handler_characters), (rsvg_set_fonts_dir):
	Add a call to set the fonts dir so it can work without eel, and
	a future version of eel will work even if it's in a different
	prefix from librsvg.
	
	* configure.in: Bump version to 1.0.0.1
	* NEWS: Mention the possibility of a 1.0.1 release.

2001-05-14  Darin Adler  <darin@eazel.com>

	* Makefile.am:
	* rsvg.c: (rsvg_text_handler_characters):
	Change awful nasty Nautilus dependency into a slightly-less-awful
	nasty Eel dependency. Also fix problem where not finding a font
	would lead to a core dump instead of missing text.

==== librsvg 1.0.0 ====
