@@ -1,3 +1,9 @@
+2001-09-24  Darin Adler  <darin@bentspoon.com>
+
+        * rsvg.c: (rsvg_entity_decl): Change so it can handle a NULL
+        for the content passed in. Happens at least if the .svg file
+        is empty and presumably in other cases.
+
 2001-09-15  Darin Adler  <darin@bentspoon.com>
 
 	* rsvg-paint-server.c: (rsvg_paint_server_lin_grad_free),
